Add repository link to workflow message
Added a link to the GitHub repository in the workflow.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,3 +17,4 @@ jobs:
               github.event_name == 'push' && github.event.commits[0].message 
               || github.event.pull_request.title 
             }}
+            🔗 Link: https://github.com/KhornVictor/I3_OOP_pos_java
