--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,10 @@
 name: Telegram Notification
+
 on: [push, pull_request]
 
 jobs:
   notify:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - name: Send Message
         uses: appleboy/telegram-action@master
