--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   notify:
-    runs-on: windows-latest
+    runs-on: self-hosted
     steps:
       - name: Send Message
         uses: appleboy/telegram-action@master
