Update Telegram message to include branch link

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,5 +17,6 @@ jobs:
           message: |
             🚀 Event: ${{ github.event_name }}
             👤 Actor: ${{ github.actor }}
+            🌿 Branch: ${{ github.ref_name }}
             🏷 Repository: ${{ github.repository }}
-            🔗 Link: https://github.com/${{ github.repository }}
+            🔗 Branch Link: https://github.com/${{ github.repository }}/tree/${{ github.ref_name }}
