--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,64 @@
-name: Telegram Notification
-on: [push, pull_request]
+name: Java CI/CD
 
-jobs:
-  notify:
+on:
+  push:
+    branches: [ main, develop ]
+  pull_request: 
+    branches: [ main, develop ]
+  workflow_dispatch:
+
+jobs: 
+  build:
     runs-on: ubuntu-latest
+    
     steps:
-      - name: Send Telegram Message
+      - name:  Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: 'maven'
+      
+      - name:  Compile Java files
+        run: |
+          mkdir -p bin
+          find src/main -name "*.java" -print0 | xargs -0 javac -d bin -cp "lib/*"
+      
+      - name: Run tests
+        run: |
+          if [ -d "src/test" ] && [ "$(find src/test -name '*.java' | wc -l)" -gt 0 ]; then
+            find src/test -name "*.java" -print0 | xargs -0 javac -d bin -cp "bin: lib/*"
+            echo "Tests compiled successfully"
+          else
+            echo "No tests found, skipping test execution"
+          fi
+      
+      - name: Archive build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: compiled-classes
+          path: bin/
+          retention-days: 7
+
+  notify:
+    needs: build
+    runs-on:  ubuntu-latest
+    if: always()
+    
+    steps:
+      - name:  Send Telegram Notification
         uses: appleboy/telegram-action@master
         with:
           to: ${{ secrets.TELEGRAM_TO }}
-          token: ${{ secrets.TELEGRAM_TOKEN }}
-          format: markdown
+          token: ${{ secrets. TELEGRAM_TOKEN }}
+          format:  markdown
           message: |
-            🔔 GitHub Notification
+            🔔 Build ${{ needs.build.result == 'success' && '✅ SUCCESS' || '❌ FAILED' }}
             
-            👤 Actor: ${{ github.actor }}
+            👤 Actor: ${{ github. actor }}
             📂 Repository: ${{ github.repository }}
             📦 Event: ${{ github.event_name }}
+            🔗 Run:  ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
