--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,4 +21,4 @@ jobs:
           REPO_NAME="${{ github.repository }}"
           BRANCH_NAME="${{ github.ref_name }}"
           COMMIT_MESSAGE="${{ github.event.head_commit.message }}"
-          MESSAGE=" GitHub Event: $EVENT_TYPE\nRepository: $REPO_NAME\nBranch: $BRANCH_NAME\nMessage: $COMMIT_MESSAGE"
+          MESSAGE="📢 GitHub Event: $EVENT_TYPE\nRepository: $REPO_NAME\nBranch: $BRANCH_NAME\nMessage: $COMMIT_MESSAGE"
